# poly

./: .gitignore  config.py  config.yaml  db.py  engine.py  llm_parser.py  main.py  market_discovery.py  pyproject.toml
docs/superpowers/plans/: 2026-03-10-polymarket-arbitrage-system.md
docs/superpowers/specs/: 2026-03-10-polymarket-arbitrage-system-design.md
skills/: __init__.py
skills/data_stream/: __init__.py  stream.py  vwap.py
skills/executor/: __init__.py  executor.py
skills/logic_engine/: __init__.py  constraints.py
skills/optimization/: __init__.py  frank_wolfe.py  kelly.py
tests/: test_api.py  test_config.py  test_db.py  test_engine.py  test_integration.py  test_llm_parser.py  test_market_discovery.py
web/: api.py
web/static/: app.js  index.html  style.css
